# knowledge-graph

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/rules/: architecture.mdc  cypher-examples.mdc  data-pipeline.mdc  fastapi-patterns.mdc  knowledge-sources.mdc  neo4j-cypher25.mdc  streamlit-ui.mdc  testing-patterns.mdc
data/: cypher25_examples.cypher  neo4j_2025_schema.cypher  sample_data.cypher
docker/: Dockerfile.api  Dockerfile.ui  docker-compose.yml
docker/neo4j/conf/: neo4j.conf
scripts/: init_sample_data.py  run_dev.py  run_radar_pipeline.py
src/knowledge_graph/: __init__.py
src/knowledge_graph/api/: main.py
src/knowledge_graph/api/routers/: contexts.py  evidence.py  methodologies.py  practices.py  radar.py  rules.py
src/knowledge_graph/database/: __init__.py  connection.py  repository.py
src/knowledge_graph/models/: __init__.py  nodes.py  radar.py
src/knowledge_graph/pipeline/: __init__.py  orchestrator.py
src/knowledge_graph/pipeline/ingestors/: __init__.py  neo4j_ingestor.py
src/knowledge_graph/pipeline/processors/: __init__.py  radar_processor.py
src/knowledge_graph/pipeline/scrapers/: __init__.py  thoughtworks_scraper.py
src/knowledge_graph/ui/: __init__.py  app.py
src/knowledge_graph/utils/: __init__.py  config.py
tests/: __init__.py
tests/unit/: test_models.py
